# testpypa

./: README.md
abcd-1234-same-name-for-import-package-Flit/: README.md  dist_fail  pyproject.toml
abcd-1234-same-name-for-import-package-Hatchling/: README.md  pyproject.toml
abcd-1234-same-name-for-import-package-PDM/: README.md  pyproject.toml
abcd-1234-same-name-for-import-package-setuptools/: README.md  pyproject.toml
abcd-1234-same-name-for-import-package-setuptools/src/abcd_1234_same_name_for_import_package_setuptools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
abcd-1234-snake-case-for-import-package-Flit/: README.md  pyproject.toml
abcd-1234-snake-case-for-import-package-Hatchling/: README.md  pyproject.toml
abcd-1234-snake-case-for-import-package-PDM/: README.md  pyproject.toml
abcd-1234-snake-case-for-import-package-setuptools/: README.md  pyproject.toml
abcd-1234-snake-case-for-import-package-setuptools/src/abcd_1234_snake_case_for_import_package_setuptools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
