# pyproject.toml

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "abcd-1234-snake-case-for-import-package-Flit"
version = "1.0.0"
description = "This is a test"
readme = "README.md"
authors = [
    { name = "Laurent Lyaudet", email = "laurent.lyaudet@gmail.com" },
]
license = { file = "COPYING.LESSER" }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["test", "PyPA"]
dependencies = [
]
requires-python = ">=3.0"

[project.optional-dependencies]
dev = ["black"]

